<resources>
    <string name="app_name">Wechselkurs</string>
    <string name="base_currency">EUR</string>
    <string name="exchange_currency">USD</string>
    <string name="rate">1.25</string>
    <string name="convert_button">Konvertieren</string>
    <string name="conversion_result">Ergebnis</string>
    <string name="enter_amount">Betrag eingeben</string>
    <string name="to">Nach</string>
    <string name="from">Von</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>