<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Converter">

    <Spinner
        android:id="@+id/SPFrom"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/SPTo"
        app:layout_constraintEnd_toStartOf="@+id/SPTo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/SPTo" />

    <Spinner
        android:id="@+id/SPTo"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/SPFrom"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TVFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:text="@string/from"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/SPFrom"
        app:layout_constraintStart_toStartOf="@+id/SPFrom" />

    <TextView
        android:id="@+id/TVTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:text="@string/to"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/SPTo"
        app:layout_constraintStart_toStartOf="@+id/SPTo" />

    <EditText
        android:id="@+id/ETAmount"
        android:layout_width="180dp"
        android:layout_height="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="264dp"
        android:layout_marginBottom="92dp"
        android:ems="10"
        android:hint="@string/enter_amount"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/ButtonConvert"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TVResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="119dp"
        android:text="@string/conversion_result"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETAmount" />

    <Button
        android:id="@+id/ButtonConvert"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:text="@string/convert_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/ETAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ETAmount" />

</androidx.constraintlayout.widget.ConstraintLayout>